--- a/index.html
+++ b/index.html
@@ -5,9 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sharif Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1 class="orange-color">Peter Parker<span style="color: black;"> World!</span> </h1>
+            <h3>Building Climber and Train Stopper</h3>
+            <p >You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p> <br>
+            <a class="link-button" target="_blank" href="http://facebook.com/sharif.00112">Hire Me</a>
+        </div>
     
+        <div class="half width">
+            <img src="images/sharif.png" alt="Image of Md Sharif Hossain" style="width: 330px; border-left: 100px solid white; border-top: 30px solid white; border-right: 50px solid white ;">
+        </div>
+    </section>
+
+    <section>
+        <div>
+
+        </div>
+
+        <div>
+
+        </div>
+    </section>
+
+    <section>
+        <div>
+
+        </div>
+
+        <div>
+            
+        </div>
+    </section>
 </body>
 </html>
