--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1 class="orange-color">Peter Parker<span style="color: black;"> World!</span> </h1>
             <h3>Building Climber and Train Stopper</h3>
             <p >You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p> <br>
-            <a class="link-button" target="_blank" href="http://facebook.com/sharif.00112">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-sharif-hossain-481582137/">Hire Me</a>
         </div>
     
         <div class="half width">
