--- a/index.html
+++ b/index.html
@@ -13,25 +13,28 @@
 <body>
     <section class="top-banner">
         <div class="half-width">
-            <h1>Welcome To</h1>
-            <h1 class="orange-color">Peter Parker<span style="color: black;"> World!</span> </h1>
-            <h3>Building Climber and Train Stopper</h3>
+            <h1 style="padding-left: 20%;">Welcome To</h1>
+            <h1 style="padding-left: 20%;"class="orange-color">Peter Parker<span style="color: black;"> World!</span> </h1>
+            <h2>Building Climber and Train Stopper</h2>
             <p >You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p> <br>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-sharif-hossain-481582137/">Hire Me</a>
         </div>
     
         <div class="half width">
-            <img src="images/sharif.png" alt="Image of Md Sharif Hossain" style="width: 330px; border-left: 100px solid white; border-top: 30px solid white; border-right: 50px solid white ;">
+            <img src="images/sharif.png" alt="Image of Md Sharif Hossain" style="width: 330px; border-left: 100px solid white; border-top: 30px solid white; border-right: 50px solid white ;"> 
         </div>
     </section>
 
-    <section>
-        <div>
-
+    <section class="dream-big">
+        <div class="half width">
+            <img src="images/sharif2.png" alt="Sharif Hossain Picture" style="width: 330px; border-left: 100px solid white; border-top: 30px solid white; border-right: 50px solid white ;">
         </div>
 
-        <div>
-
+        <div class="half width">
+            <h1>Dream Big</h2>
+            <h2>Become a Web Developer</h3>
+                <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p><br>
+                <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
 
