--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexiable-container">
         <div class="half-width">
             <h1 style="padding-left: 20%;">Welcome To</h1>
             <h1 style="padding-left: 20%;"class="orange-color">Peter Parker<span style="color: black;"> World!</span> </h1>
@@ -25,27 +25,37 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexiable-container">
         <div class="half width">
             <img src="images/sharif2.png" alt="Sharif Hossain Picture" style="width: 330px; border-left: 100px solid white; border-top: 30px solid white; border-right: 50px solid white ;">
         </div>
 
         <div class="half width">
             <h1>Dream Big</h2>
-            <h2>Become a Web Developer</h3>
+            <h2>Become a Web Developer</h2>
                 <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p><br>
                 <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
 
-    <section>
-        <div>
-
-        </div>
-
-        <div>
-            
+    <section class="experiance-area">
+        <h1 style="padding-left: 5%;">Experiances</h1> 
+        <div class="flexiable-container">
+            <div id="full-dev-experiance" class="experiance-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+    
+            <div id="web-dev-experiance" class="experiance-item">
+                <h2>Baby Web Developer</h2>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
