--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sharif Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/images/sharif2.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
@@ -34,7 +35,7 @@
             <h1>Dream Big</h2>
             <h2>Become a Web Developer</h2>
                 <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p><br>
-                <a class="link-button" target="_blank" href="">Download Resume</a>
+                <a class="link-button" target="_blank" href="images/Md Sharif Hossain-CV-Updated-2022.pdf">Download Resume</a>
         </div>
     </section>
 
@@ -43,19 +44,19 @@
         <div class="flexiable-container">
             <div id="full-dev-experiance" class="experiance-item">
                 <h2>Full Stack Web Developer</h2>
-                <h3>2021-Present | Pro Level Developer</h3>
+                <h3>2022-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
     
             <div id="web-dev-experiance" class="experiance-item">
                 <h2>Baby Web Developer</h2>
-                <h3>2020-2021 | Programming Hero Learner</h3>
+                <h3>2021-2022 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
         </div>
     </section>
     <footer>
-        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+        <p>© Peter Parker 2022, a <a target="_blank" href="https://www.linkedin.com/in/md-sharif-hossain-481582137/">Sharif Hossain</a> initiative.</p>
     </footer>
 </body>
 </html>
